<resources>

    <string name="app_name">KinoSense</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">KinoSense</string>    
    <string name="Kinosense">KINOSENSE</string>
    <string name="rule">New Rule</string>
    <string name="reviewrule">Review Rule</string>
    <string name="wifi">WiFi</string>
    <string name="WiFiON">WiFi ON</string>
    <string name="WiFiOFF">WiFi OFF</string>
    <string name="Silent">Silent</string>
    <string name="flight">Flight</string>
    <string name="activate">Activate</string>
    <string name="back">Back</string>	
    <string name="create">Create</string>    
    <string name="next">Next</string>
    <string name="beep">Beep</string>
    <string name="sms">SMS</string>
    <string name="actionlist">Action Lists</string>
    <string name="triggerlist">Trigger Lists</string>
    <string name="lowbattery">Battery Low</string>
    <string name="select">Select</string>
    <string name="batterycharged">Battery Full</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="meeting">Meeting</string>
    <string name="texton">WiFi ON</string>
    <string name="textoff">WiFi OFF</string>
    <string name="cancel">Cancel</string>    
    <string name="rulelist">Rule List</string>   
    <string name="headphoneconnected">Headphone Connected</string>   
    <string name="headphonedisconnected">Headphone Removed</string>    
    <string name="incomingcall">Incoming Call</string>    
    <string name="shake">Phone Shake</string>   
    <string name="simcardchange">Sim Card Changed</string>   
    <string name="unlockdevice">Device Unlocked</string>   
    <string name="wifidetected">WiFi Detected</string>      
    <string name="alarm">Alarm</string>   
    <string name="shownotification">Notification</string>   
    <string name="vibrate">Vibrate</string>  
    <string name="save">Save</string>  
    <string name="edit">Edit</string>
    <string name="onOff">On/Off</string>   
    <string name="delete">Delete</string>   
    <string name="dialog_title_delete">Delete the Rule</string>    
    <string name="dialog_message_delete">Do you really want to Delete the rules</string>   
    <string name="message_rule_already_exist">Rule Already Exist!</string>
   <!-- <string name=""></string> -->
    <string name="action_next">Next</string>
    <string name="action_create">Create</string>
    <string name="action_add_rule">Add</string>
    <string name="select_trigger_warning">Select at least one trigger</string>
    <string name="select_action_warning">Select at least one action</string>
    <string name="active_rule_green">Currently active rules are shown in green</string>

</resources>
