<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E5E4E2" >

    <!-- Adding Scroll View for the Rule List -->

    <ScrollView
        android:id="@+id/actionScrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:paddingTop="10dp" >

        <!-- IMPORTANT otherwise backgrnd img. will not fill the whole screen -->


        <!-- Adding RelativeLayout View for the Rule List -->

        <RelativeLayout
            android:id="@+id/actionpanel"
            android:layout_width="fill_parent"
            android:layout_height="450dp" >

            <!-- Rule for Wifi On -->

            <TextView
                android:id="@+id/textviewwifiOn"
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:layout_alignBottom="@+id/checkBoxWifiOn"
                android:layout_alignParentLeft="true"
                android:text="@string/WiFiON"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#008000"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBoxWifiOn"
                android:layout_width="100dip"
                android:layout_height="50dip"
                android:layout_alignLeft="@+id/checkBoxWifiOff"
                android:layout_alignParentRight="true"
                android:text="@string/activate"
                android:textColor="#008000" />

            <!-- Rule for Wifi Off -->

            <TextView
                android:id="@+id/textviewwifiOff"
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:layout_alignBaseline="@+id/checkBoxWifiOff"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textviewwifiOn"
                android:text="@string/WiFiOFF"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#008000"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBoxWifiOff"
                android:layout_width="100dip"
                android:layout_height="50dip"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/checkBoxWifiOn"
                android:text="@string/activate"
                android:textColor="#008000" />

            <!-- Rule for Keeping Phone on Silent -->

            <TextView
                android:id="@+id/textviewsilent"
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:layout_alignBaseline="@+id/checkBoxsilent"
                android:layout_alignParentLeft="true"
                android:text="@string/Silent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#008000"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBoxsilent"
                android:layout_width="100dip"
                android:layout_height="50dip"
                android:layout_alignLeft="@+id/checkBoxflight"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textviewwifiOff"
                android:text="@string/activate"
                android:textColor="#008000" />

            <!-- Rule for Keeping Phone on Flight mode -->

            <TextView
                android:id="@+id/textviewflight"
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:layout_alignBaseline="@+id/checkBoxflight"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textviewsilent"
                android:text="@string/flight"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#008000"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBoxflight"
                android:layout_width="100dip"
                android:layout_height="50dip"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/checkBoxsilent"
                android:text="@string/activate"
                android:textColor="#008000" />

            <!-- Rule for Sending SMS -->

            <TextView
                android:id="@+id/textviewsms"
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:layout_alignBaseline="@+id/checkBoxsms"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textviewflight"
                android:text="@string/sms"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#008000"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBoxsms"
                android:layout_width="100dip"
                android:layout_height="50dip"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/checkBoxflight"
                android:text="@string/activate"
                android:textColor="#008000" />

            <!-- Rule for Alarm -->

            <TextView
                android:id="@+id/textviewalarm"
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:layout_alignBaseline="@+id/checkBoxalarm"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textviewsms"
                android:text="@string/alarm"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#008000"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBoxalarm"
                android:layout_width="100dip"
                android:layout_height="50dip"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/checkBoxsms"
                android:text="@string/activate"
                android:textColor="#008000" />

            <!-- Rule for Showing Notification -->

            <TextView
                android:id="@+id/textviewshownotification"
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:layout_alignBaseline="@+id/checkBoxshownotification"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textviewalarm"
                android:text="@string/shownotification"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#008000"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBoxshownotification"
                android:layout_width="100dip"
                android:layout_height="50dip"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/checkBoxalarm"
                android:text="@string/activate"
                android:textColor="#008000" />

            <!-- Rule for vibrate -->

            <TextView
                android:id="@+id/textviewvibrate"
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:layout_alignBaseline="@+id/checkBoxvibrate"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textviewshownotification"
                android:text="@string/vibrate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#008000"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBoxvibrate"
                android:layout_width="100dip"
                android:layout_height="50dip"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/checkBoxshownotification"
                android:text="@string/activate"
                android:textColor="#008000" />
            <!-- Bottom view for Previous and Next Screen -->
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>